[package]
name = "binance-https-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
